# FedAvgFlower

fed-avg/: README.md  plot_results.py  pyproject.toml  run_experiments.py
fed-avg/fed_avg/: __init__.py  client_app.py  server_app.py  task.py
