[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fed-avg"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "vitor lucio de oliveira"

[tool.flwr.app.components]
serverapp = "fed_avg.server_app:app"
clientapp = "fed_avg.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 50
fraction-fit = 0.1
local-epochs = 5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 100 #num_participantes
